# ChangeLog for app-emacs/keywiz
# Copyright 1999-2007 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/app-emacs/keywiz/ChangeLog,v 1.5 2007/02/06 13:35:50 flameeyes Exp $

  06 Feb 2007; Diego Pettenò <flameeyes@gentoo.org> ChangeLog:
  Regenerate digest in Manifest2 format.

  01 Jul 2005; Matthew Kennedy <mkennedy@gentoo.org> keywiz-1.4.ebuild:
  Keywording ~amd64.

  03 Sep 2004; David Holm <dholm@gentoo.org> keywiz-1.4.ebuild:
  Added to ~ppc.

*keywiz-1.4 (24 Aug 2004)

  24 Aug 2004; <mkennedy@gentoo.org> +metadata.xml, +files/50keywiz-gentoo.el,
  +keywiz-1.4.ebuild:
  Initial port.  Ebuild contributed by Matthew Kennedy <mkennedy@gentoo.org>
