@@ -6,14 +6,14 @@ MD5 a438e870998c08711dc1728da4456d11 files/50keywiz-gentoo.el 130
 RMD160 5ecd90b81622cdece1f78cc32d6937fd7a680d6e files/50keywiz-gentoo.el 130
 SHA256 b9eec2503aa367e3ee7874e8a36ce1d7ca71f93cd3727e98c9388bebccbe3fe5 files/50keywiz-gentoo.el 130
 DIST keywiz-1.4.tar.gz 4159 RMD160 1e10017774e85f813d9f060dac4fe63c5c7680fd SHA1 01554a6c29284d9814a0ea2d446776284e2741fa SHA256 39d8511c805329d1432b49c0a528a2a6f6cc35e96a1bc10e74d39434ac93d926
-EBUILD keywiz-1.4.ebuild 473 RMD160 47c244f02322ef9e3bec63c7f801293f864a8264 SHA1 72cc243644003ea3b5a9d5d6f09077bf5fe6b18a SHA256 c51260103ab54ac0c7f4b674143047e7aa78d6d08bc4bebc91eefdd7ecd71011
-MD5 b986662e3d883ffb4b5370d099477e2e keywiz-1.4.ebuild 473
-RMD160 47c244f02322ef9e3bec63c7f801293f864a8264 keywiz-1.4.ebuild 473
-SHA256 c51260103ab54ac0c7f4b674143047e7aa78d6d08bc4bebc91eefdd7ecd71011 keywiz-1.4.ebuild 473
-MISC ChangeLog 696 RMD160 46f51e1d0eac4455700a6c3e68ad2a6e3afb8973 SHA1 89e1190e9b3ec0a48279cdf555e312973ab1fb8a SHA256 b587845b19c70590bf0b4558b9d3e5dd20713cb8de89a7c762aebe6017d89be8
-MD5 4fc56127dee407a25be2e087ce351464 ChangeLog 696
-RMD160 46f51e1d0eac4455700a6c3e68ad2a6e3afb8973 ChangeLog 696
-SHA256 b587845b19c70590bf0b4558b9d3e5dd20713cb8de89a7c762aebe6017d89be8 ChangeLog 696
+EBUILD keywiz-1.4.ebuild 447 RMD160 81044854dcf36bc0332d74a43816309e09dbaf8e SHA1 065df91e0fe2c03a09f38b8d6143a5f239143c2a SHA256 c9046e49b091c5f89536db4620398e72ea2461f652177e6316e3eb0064acea14
+MD5 589342ccc82b2fcf195e72f6c6a9361b keywiz-1.4.ebuild 447
+RMD160 81044854dcf36bc0332d74a43816309e09dbaf8e keywiz-1.4.ebuild 447
+SHA256 c9046e49b091c5f89536db4620398e72ea2461f652177e6316e3eb0064acea14 keywiz-1.4.ebuild 447
+MISC ChangeLog 858 RMD160 506aec3183e8330c4fe7fc8148ad561ba5b13e34 SHA1 7aa0ac86c274fc952dc40504629dc1fbc01b449a SHA256 f89f1b98864f2944b8a7d782f5945dec489c002053e3f7cb911797d662b4e22c
+MD5 7a56dd21f4f88e7c863d5fa60fd36839 ChangeLog 858
+RMD160 506aec3183e8330c4fe7fc8148ad561ba5b13e34 ChangeLog 858
+SHA256 f89f1b98864f2944b8a7d782f5945dec489c002053e3f7cb911797d662b4e22c ChangeLog 858
 MISC metadata.xml 158 RMD160 415d172437ca754d24fc5ab186ba8e77934d96e4 SHA1 61f6eff9729cd87a725c2a70c81aca4270a17fc4 SHA256 1393bdef3a74343fdb40a112c7096a1af16f67e7a43413250de28dfe73810eab
 MD5 fcd33d07e4ee719b01157946734f4fe8 metadata.xml 158
 RMD160 415d172437ca754d24fc5ab186ba8e77934d96e4 metadata.xml 158
@@ -22,9 +22,9 @@ MD5 b7cf346ecd6013fe60de6e05d7588431 files/digest-keywiz-1.4 226
 RMD160 f2e2499606cb5c1a729381007000deea44c439b8 files/digest-keywiz-1.4 226
 SHA256 0965116607b90f54cc2e26afb051d4f512dd08e02af745020d5002e10a53b11c files/digest-keywiz-1.4 226
 -----BEGIN PGP SIGNATURE-----
-Version: GnuPG v2.0.2 (GNU/Linux)
+Version: GnuPG v1.4.7 (GNU/Linux)
 
-iD8DBQFFyIQ8AiZjviIA2XgRAp4QAJ9FgKH0v98eE97x4nELDNO/duCdtQCdEKUt
-YgMh7hq02AIkGZmACV27uTY=
-=kohf
+iD8DBQFHYPFSNQqtfCuFneMRAqwYAKCNC9n8lnINzF5OMWLbjoTupanfBwCdGo7A
+ecsUvmK75wAJ9U0hKiSzN50=
+=AnEf
 -----END PGP SIGNATURE-----
