@@ -1,18 +1,16 @@
-# Copyright 1999-2005 Gentoo Foundation
+# Copyright 1999-2007 Gentoo Foundation
 # Distributed under the terms of the GNU General Public License v2
-# $Header: /var/cvsroot/gentoo-x86/app-emacs/keywiz/keywiz-1.4.ebuild,v 1.4 2005/07/01 19:49:37 mkennedy Exp $
+# $Header: /var/cvsroot/gentoo-x86/app-emacs/keywiz/keywiz-1.4.ebuild,v 1.5 2007/12/13 08:43:45 opfer Exp $
 
 inherit elisp eutils
 
 DESCRIPTION="Emacs key sequence quiz"
-HOMEPAGE="http://www.ifa.au.dk/~harder/"
+HOMEPAGE="http://www.phys.au.dk/~harder/"
 SRC_URI="mirror://gentoo/${P}.tar.gz"
 
 LICENSE="GPL-2"
 SLOT="0"
 KEYWORDS="~amd64 ~ppc ~x86"
 IUSE=""
-
-DEPEND="virtual/emacs"
 
 SITEFILE=50keywiz-gentoo.el
