@@ -1,6 +1,10 @@
 # ChangeLog for app-emacs/keywiz
 # Copyright 1999-2007 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/app-emacs/keywiz/ChangeLog,v 1.5 2007/02/06 13:35:50 flameeyes Exp $
+# $Header: /var/cvsroot/gentoo-x86/app-emacs/keywiz/ChangeLog,v 1.6 2007/12/13 08:43:45 opfer Exp $
+
+  13 Dec 2007; Christian Faulhammer <opfer@gentoo.org> keywiz-1.4.ebuild:
+  set to correct HOMEPAGE; remove virtual/emacs from DEPEND (provided by
+  eclass already)
 
   06 Feb 2007; Diego Pettenò <flameeyes@gentoo.org> ChangeLog:
   Regenerate digest in Manifest2 format.
